--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-<link rel="import" href="bower_components/juicy-ace-editor/src/juicy-ace-editor.html">
-<juicy-ace-editor>Editable code here</juicy-ace-editor>
+<head>
+	<!--script src="bower_components/webcomponentsjs/webcomponents.min.js"></script-->
+	<script src="bower_components/platform/platform.js"></script>
+	<link rel="import" href="bower_components/juicy-markdown-tabbededitor/juicy-markdown-tabbededitor.html">
+
+	<link rel="import" href="bower_components/juicy-ace-editor/src/juicy-ace-editor.html">
+</head>
+
+<body>
+<div>
+	<juicy-markdown-tabbededitor>Something new</juicy-markdown-tabbededitor>
+</div>
+<div>
+	<juicy-ace-editor>Editable code here</juicy-ace-editor>
+</div>
+</body>
+
+
